@@ -1,6 +1,10 @@
 Knot Resolver 3.x.y (2019-0m-dd)
 ================================
 
+Incompatible changes
+--------------------
+- libknot >= 2.7.6 is required
+
 Improvements
 ------------
 - policy.TLS_FORWARD: if hostname is configured, send it on wire (!759)
